--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,4 +17,5 @@
     </section>
     <%= link_to t(".edit"), edit_path, class: "btn btn-primary" %>
   </aside>
+  <%= render "activities" %>
 </div>
