--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -25,6 +25,22 @@
         </span>
       </div>
     </div>
+    <div class="activ-follower">
+      <div class="mini">
+        <%= image_tag "mj.gif" %>
+        <%= image_tag "a.png" %>
+        <%= image_tag "c.jpeg" %>
+        <%= image_tag "t.jpeg" %>
+        <%= image_tag "i.jpeg" %>
+        <%= image_tag "v.jpeg" %>
+        <%= image_tag "i.jpeg" %>
+        <%= image_tag "t.jpeg" %>
+        <%= image_tag "i.jpeg" %>
+        <%= image_tag "e.jpeg" %>
+        <%= image_tag "s.png" %>
+      </div>
+      
+    </div>
   <% else %>
     <h1><%= t "elearning" %></h1>
     <h2>
