--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,16 @@
         <li><%= t ".email" %><%= @user.email %></li>
       <ul>
     </section>
-    <%= link_to t(".edit"), edit_path, class: "btn btn-primary" %>
+    <% if current_user? @user %>
+      <%= link_to t(".edit"), edit_path, class: "btn btn-primary" %>
+    <% end %>
+    <% if current_user.following? @user.id %>
+      <%= link_to "Unfollow", follow_c_path,
+        class: "btn btn-primary color-gray", method: :delete %>
+    <% else %>
+      <%= link_to "Follow", follow_d_path, class: "btn btn-primary",
+        method: :post %>
+    <% end %>
   </aside>
   <%= render "activities" %>
 </div>
