change name and add column

--- a/app/views/lessions/index.html.erb
+++ b/app/views/lessions/index.html.erb
@@ -26,7 +26,7 @@
               <%= image_tag lession.image.url if lession.image? %>
             </td>
             <td>
-              <%= link_to t(".edit"), edit_lession_path(lession) %>
+              <%= link_to t(".edit"), edit_lesson_path(lession) %>
             </td>
             <td>
               <%= link_to t(".delete"), lession,
