--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,36 +1,51 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="container">
-    <%= link_to image_tag("rsz_1elearning.png", alt: "Rails logo"),
-      home_path, class: "logo"%>
-    <nav>
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to t("home"), root_path, class: "header123" %></li>
-        
-        <% if logged_in? %>
-          <% if current_user.admin %>
-            <li><%= link_to t("manage"), admin_path,
-              class: "header123" %></li>
-          <% end %>
-          <li><%= link_to t("user_list"), users_path,
-            class: "header123" %></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <%= @current_user[:name] %> <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to t("profile"), profile_path %></li>
-              <li><%= link_to t("setting"), edit_path %></li> 
-              <li class="divider"></li>
-              <li>
-                <%= link_to t("logout"), logout_path, method: :delete %>
-              </li>
-            </ul>
-          </li>
+<div class="header">
+  <div class="max">
+    <%= link_to "E-learning", root_path, class: "logo" %>
+    <div class="header-right">
+      <%= link_to t("home"), root_path,
+        class: if active? root_path
+                 "active"
+               end %>
+      <% if logged_in? %>
+        <% if current_user.admin %>
+          <%= link_to t("manage"), admin_path,
+            class: if active? admin_path
+                    "active"
+                   end %>
         <% else %>
-          <li><%= link_to t("signup"), signup_path %></li>
-          <li><%= link_to t("login"), login_path, class:"header123"%></li>
+          <%= link_to t(".wordlist"), listword_path,
+            class: if active? listword_path
+                    "active"
+                   end %>
         <% end %>
-      </ul>
-    </nav>
+        <%= link_to t("user_list"), users_path,
+          class: if active? users_path
+                  "active"
+                 end %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <%= @current_user[:name] %> <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <li><%= link_to t("profile"), profile_path %></li>
+            <li><%= link_to t("setting"), edit_path %></li> 
+            <li class="divider"></li>
+            <li>
+              <%= link_to t("logout"), logout_path, method: :delete %>
+            </li>
+          </ul>
+        </li>
+      <% else %>
+        <%= link_to t("signup"), signup_path,
+          class: if active? signup_path
+                  "active"
+                 end %>
+        <%= link_to t("login"), login_path,
+          class: if active? login_path
+                  "active"
+                 end %>
+      <% end %>
+    </div>
   </div>
-</header>
+  <div class="clear"></div>
+</div>
