--- a/app/views/users/admin.html.erb
+++ b/app/views/users/admin.html.erb
@@ -3,7 +3,7 @@
 <%= render "layouts/menu" %>
 <div class="row">
   <div class="col-md-8">
-    <table class="table">
+    <table class="table table-bordered table-hover">
       <tr>
         <th><%= t ".name" %></th>
         <th><%= t ".email" %></th>
