--- a/app/views/lesson_logs/show.html.erb
+++ b/app/views/lesson_logs/show.html.erb
@@ -1,92 +1,43 @@
 <div class="container margin-top-100">
-  <% if @lesson_log.pass.nil? %>
-    <input id="created_at" name="<%= @lesson_log.created_at %>" 
-      value="<%= @lesson_log.created_at %>" type="hidden" />
-    <input id="id_lessonlog"
-      value="<%= @lesson_log.id %>" type="hidden" />
-    <input id="updated_at" 
-      value="<%= @lesson_log.updated_at %>" type="hidden" />
-    <input id="saved" 
-      value="<%= @lesson_log.saved %>" type="hidden" />
-    <input id="spend_time" 
-      value="<%= @lesson_log.spend_time %>" type="hidden" />
-    <center>
-      <div id="clockdiv" class="clockdiv">
-        <div>
-          <span class="days"></span>
-          <div class="smalltext">
-            <%= t ".day" %>
-          </div>
-        </div>
-        <div>
-          <span class="hours"></span>
-          <div class="smalltext">
-            <%= t ".hours" %>
-          </div>
-        </div>
-        <div>
-          <span class="minutes"></span>
-          <div class="smalltext">
-            <%= t ".minute" %>
-          </div>
-        </div>
-        <div>
-          <span class="seconds"></span>
-          <div class="smalltext">
-            <%= t ".second" %>
-          </div>
+  <input id="created_at" name="<%= @lesson_log.created_at %>" 
+    value="<%= @lesson_log.created_at %>" type="hidden" />
+  <input id="id_lessonlog"
+    value="<%= @lesson_log.id %>" type="hidden" />
+  <input id="updated_at" 
+    value="<%= @lesson_log.updated_at %>" type="hidden" />
+  <input id="saved" 
+    value="<%= @lesson_log.saved %>" type="hidden" />
+  <input id="spend_time" 
+    value="<%= @lesson_log.spend_time %>" type="hidden" />
+  <center>
+    <div id="clockdiv" class="clockdiv">
+      <div>
+        <span class="days"></span>
+        <div class="smalltext">
+          <%= t ".day" %>
         </div>
       </div>
-    </center>
-    
-    <%= form_for :questionlog, method: :patch, html: {name: "go"} do |f| %>
-      <% i = Settings.number.zero %>
-      <% j = Settings.number.zero %>
-
-      <% @questions.each do |q| %>
-        <% next if q.answers.size < Settings.number.two || @types[i].zero? %>
-        <div>
-          <b><%= i + Settings.number.one %>. <%= q.content %></b>
-
-          <% if @types[i] == Settings.number.one %>
-            <% q.answers.size.times do %>
-              <% ql = @question_logs[j] %>
-              <li class="answer">
-                <%= radio_button_tag q.id, ql.id,
-                  (if ql.number == Settings.number.one
-                    true
-                  else
-                    false
-                  end), {class: "update-result"} %>
-                <%= label_tag "#{q.id}_#{ql.id}", ql.answer.content %>
-                <% j += Settings.number.one %>
-              </li>
-            <% end %>
-          <% else %>
-            <% q.answers.size.times do %>
-              <% ql = @question_logs[j] %>
-              <li class="answer">
-                <%= check_box_tag ql.id, ql.id,
-                  (if ql.number == Settings.number.one
-                    true
-                  else
-                    false
-                  end), {class: "update-result"} %>
-                <%= label_tag ql.id, ql.answer.content %>
-                <% j += Settings.number.one %>
-              </li>
-            <% end %>
-          <% end %>
-          <% i += Settings.number.one %>
+      <div>
+        <span class="hours"></span>
+        <div class="smalltext">
+          <%= t ".hours" %>
         </div>
-        <br/>
-      <% end %>
-      <%= f.submit t(".finish"), class: "btn btn-primary", id: "finish" %>
-      <% if !@lesson_log.saved %>
-        <%= f.submit t(".save"), class: "btn btn-primary", id: "save" %>
-      <% end %>
-    <% end %>
-  <% else %>
-    <%= render "history" %>
-  <% end %>
+      </div>
+      <div>
+        <span class="minutes"></span>
+        <div class="smalltext">
+          <%= t ".minute" %>
+        </div>
+      </div>
+      <div>
+        <span class="seconds"></span>
+        <div class="smalltext">
+          <%= t ".second" %>
+        </div>
+      </div>
+    </div>
+  </center>
+  <fieldset disabled>
+    <%= render "form_lesson_log" %>
+  </fieldset>
 </div>
