--- a/app/views/courses/_form_course.html.erb
+++ b/app/views/courses/_form_course.html.erb
@@ -2,8 +2,8 @@
   <%= render "shared/error_messages", object: f.object %>
   <%= f.label :category_id %>
   <br>
-  <%= f.select(:category_id,
-    [[ t(".chose"), 0]] + Category.all.map{ |c| [c.name, c.id] }) %>
+  <%= f.select :category_id, Categories.all.map{|c| [c.name, c.id]},
+    include_blank: t(".chose_category") %>
   <br><br>
   
   <%= f.label :name %>
