--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -3,31 +3,8 @@
 <div class="row">
   <%= render "layouts/menu" %>
   <div class="col-md-8">
-    <table>
-      <tr>
-        <th><%= t ".category" %></th>
-        <th><%= t ".name" %></th>
-        <th><%= t ".description" %></th>
-        <th><%= t ".image" %></th>
-        <th><%= t ".edit" %></th>
-        <th><%= t ".delete" %></th>
-      </tr>
-      <% @courses.each do |course| %>
-        <tr>
-          <td><%= course.category.name %></td>
-          <td><%= course.name %></td>
-          <td><%= course.description %></td>
-          <td class="img-medium">
-            <%= image_tag course.image.url if course.image? %>
-          </td>
-          <td><%= link_to t(".edit"), edit_course_path(course) %></td>
-          <td>
-            <%= link_to t(".delete"), course,
-              method: :delete, data: { confirm: t(".sure") } %>
-          </td>
-        </tr>
-      <% end %>
-    </table>
-    <%= paginate @courses, theme: "twitter-bootstrap-3" %>
+    <%= link_to t("restore"), restore_courses_path,
+        class: "btn btn-warning f-right" %>
+    <%= render "show_courses" %>
   </div>
 </div>
