--- a/app/views/courses/restore.html.erb
+++ b/app/views/courses/restore.html.erb
@@ -3,8 +3,8 @@
 <div class="row">
   <%= render "layouts/menu" %>
   <div class="col-md-8">
-    <%= link_to t("using"), categories_path,
+    <%= link_to t("using"), courses_path,
         class: "btn btn-warning f-right" %>
-    <%= render "show_categories" %>
+    <%= render "show_courses" %>
   </div>
 </div>
