--- a/app/views/layouts/_actions_destroy.html.erb
+++ b/app/views/layouts/_actions_destroy.html.erb
@@ -1,3 +1,3 @@
-<%= link_to act, category_path(id: id, do: act),
+<%= link_to act, decide_path(path, id, act),
   method: :delete %>
 <input type="hidden" value="<%= act %>" class="act"/>
