--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -3,35 +3,8 @@
 <div class="row">
   <%= render "layouts/menu" %>
   <div class="col-md-8">
-    <table>
-      <tr>
-        <th><%= t ".category" %></th>
-        <th><%= t ".course" %></th>
-        <th><%= t ".name" %></th>
-        <th><%= t ".description" %></th>
-        <th><%= t ".image" %></th>
-        <th><%= t ".edit" %></th>
-        <th><%= t ".delete" %></th>
-      </tr> 
-      <% @lessons.each do |lesson| %>
-        <tr>
-          <td><%= lesson.course.name %></td>
-          <td><%= lesson.course.category.name %></td>
-          <td><%= lesson.name %></td>
-          <td><%= lesson.description %></td>
-          <td class="img-medium">
-            <%= image_tag lesson.image.url if lesson.image? %>
-          </td>
-          <td>
-            <%= link_to t(".edit"), edit_lesson_path(lesson) %>
-          </td>
-          <td>
-            <%= link_to t(".delete"), lesson,
-              method: :delete, data: {confirm: t(".sure")} %>
-          </td>
-        </tr>
-      <% end %>
-    </table>
-    <%= paginate @lessons, theme: "twitter-bootstrap-3" %>
+    <%= link_to t("restore"), restore_lessons_path,
+        class: "btn btn-warning f-right" %>
+    <%= render "show_lessons" %>
   </div>
 </div>
