--- a/app/views/questions/_form_question.html.erb
+++ b/app/views/questions/_form_question.html.erb
@@ -2,8 +2,7 @@
   <%= render "shared/error_messages", object: f.object %>
   <%= f.label :category_id %><br/>
   <%= f.select :category_id, @categories.map{|c| [c.name, c.id]},
-    include_blank: t(".chose_category"),
-    selected: t(".chose"), class: "cate" %>
+    include_blank: t(".chose_category") %>
   <br/><br/>
   <%= f.label t(".question") %>
   <%= f.text_field :content, class: "form-control question_content" %> 
