--- a/app/views/questions/_show_questions.html.erb
+++ b/app/views/questions/_show_questions.html.erb
@@ -1,4 +1,4 @@
-<%= link_to t(".add"), new_question_path,
+<%= link_to t(".add"), new_question_path, data: {turbolinks: false},
   class: "btn btn-primary" %>
 <table>
   <tr>
